Set package.json main -> build/package.index.js

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "compile": "tsc",
     "package": "gulp package"
   },
+  "main": "build/package/index.js",
   "bin": {
     "typeorm": "./cli.js"
   },
