--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "oracle-orm"
   ],
   "devDependencies": {
+    "@google-cloud/spanner": "^2.1.0",
     "@types/chai": "^4.1.2",
     "@types/chai-as-promised": "7.1.0",
     "@types/debug": "0.0.30",
@@ -78,7 +79,6 @@
   },
   "dependencies": {
     "@types/zen-observable": "^0.8.0",
-    "@google-cloud/spanner": "^2.0.0",
     "app-root-path": "^2.0.1",
     "buffer": "^5.1.0",
     "chalk": "^2.3.2",
@@ -109,7 +109,7 @@
   },
   "main": "build/package/index.js",
   "bin": {
-    "typeorm": "./cli.js"
+    "typeorm": "./build/package/cli.js"
   },
   "collective": {
     "type": "opencollective",
