--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "oracle-orm"
   ],
   "devDependencies": {
-    "@google-cloud/spanner": "^2.1.0",
     "@types/chai": "^4.1.2",
     "@types/chai-as-promised": "7.1.0",
     "@types/debug": "0.0.30",
@@ -78,6 +77,7 @@
     "typescript": "^2.8.1"
   },
   "dependencies": {
+    "@google-cloud/spanner": "^2.1.0",
     "@types/zen-observable": "^0.8.0",
     "app-root-path": "^2.0.1",
     "buffer": "^5.1.0",
@@ -103,7 +103,7 @@
   },
   "scripts": {
     "test-ci": "gulp ci-tests",
-    "test": "tsc && mocha --file ./build/compiled/test/utils/test-setup.js --bail --recursive --timeout 30000  ./build/compiled/test",
+    "test": "tsc && mocha --file ./build/compiled/test/utils/test-setup.js --bail --fullStackTrace --allowUncaught --recursive --timeout 30000 --reporter list  ./build/compiled/test",
     "compile": "tsc",
     "package": "gulp package"
   },
